After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690138 - Can't copy files from Recent view
Can't copy files from Recent view
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Cut Copy Paste Undo
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-13 04:08 UTC by Jeremy Bicha
Modified: 2013-04-04 20:48 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jeremy Bicha 2012-12-13 04:08:46 UTC
Nautilus 3.6.3 on Ubuntu 13.04 Alpha amd64

1. Open 'Files'
2. Click Recent in the sidebar on the left
3. Right-click on a file

'Copy' is greyed out and can't be selected. Ctrl+C doesn't work either.

Also, 'Copy to' isn't in the right-click menu but probably should be.

See bug 686068 where 'Rename' is missing from Recent.
Comment 1 Michael Wood 2013-04-03 18:33:08 UTC
It does seem like you can ctrl+x a file for cut in recent which makes the lack of copy seem odd.

Is it intended to be this way round?
Comment 2 Cosimo Cecchi 2013-04-03 22:14:05 UTC
Indeed, that was not intended. I pushed a fix for this to git master now, thanks!
Comment 3 Michael Wood 2013-04-04 10:27:29 UTC
could you help us understand the rational for disabling the copy/cut options, as it's come up as a downstream bug. Thanks
Comment 4 Cosimo Cecchi 2013-04-04 20:48:41 UTC
(In reply to comment #3)
> could you help us understand the rational for disabling the copy/cut options,
> as it's come up as a downstream bug. Thanks

Copy was disabled by mistake. Cut doesn't make sense, as Recent is a "virtual aggregator", not a directory. It would be weird if cutting a file from there would remove it from another directory you're not aware of.