view: allow copying, and not cutting, from Recent Files

Previously, we enabled the Cut action for the Recent location, and kept
Copy and Copy To disabled. This should be the other way around, as
copying a file from there is a valid option, whereas cutting/moving it
doesn't make sense, being a virtual location.

https://bugzilla.gnome.org/show_bug.cgi?id=690138