src/nautilus-view.c
@@ -8386,6 +8386,7 @@ real_update_menus (NautilusView *view)
 	gboolean selection_contains_recent;
 	gboolean can_create_files;
 	gboolean can_delete_files;
+	gboolean can_move_files;
 	gboolean can_trash_files;
 	gboolean can_copy_files;
 	gboolean can_link_files;
@@ -8422,9 +8423,9 @@ real_update_menus (NautilusView *view)
 		!selection_contains_special_link &&
 		!selection_contains_desktop_or_home_dir;
 	can_copy_files = selection_count != 0
-		&& !selection_contains_recent
 		&& !selection_contains_special_link;
 
+	can_move_files = can_delete_files && !selection_contains_recent;
 	can_link_files = can_create_files && can_copy_files;
 
 	action = gtk_action_group_get_action (view->details->dir_action_group,
@@ -8717,7 +8718,7 @@ real_update_menus (NautilusView *view)
 
 	action = gtk_action_group_get_action (view->details->dir_action_group,
 					      NAUTILUS_ACTION_CUT);
-	gtk_action_set_sensitive (action, can_delete_files);
+	gtk_action_set_sensitive (action, can_move_files);
 	gtk_action_set_visible (action, !selection_contains_recent);
 
 	action = gtk_action_group_get_action (view->details->dir_action_group,
@@ -8749,10 +8750,10 @@ real_update_menus (NautilusView *view)
 	action = gtk_action_group_get_action (view->details->dir_action_group,
 					      NAUTILUS_ACTION_COPY_TO);
 	gtk_action_set_sensitive (action, can_copy_files);
-	gtk_action_set_visible (action, !selection_contains_recent);
+
 	action = gtk_action_group_get_action (view->details->dir_action_group,
 					      NAUTILUS_ACTION_MOVE_TO);
-	gtk_action_set_sensitive (action, can_delete_files);
+	gtk_action_set_sensitive (action, can_move_files);
 	gtk_action_set_visible (action, !selection_contains_recent);
 
 	action = gtk_action_group_get_action (view->details->dir_action_group, NAUTILUS_ACTION_SHOW_HIDDEN_FILES);
